non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <p>Adds optional <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> meta tags to webpages.</p>
 
-<p>Adds a Mobile App Meta Tags settings page to the SSO menu with additional options:</p>
+<p>Adds a Mobile App Meta Tags settings page with additional options:</p>
 
 <ul>
 <li>Mobile App Banner
