--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <p>Adds optional <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> meta tags to webpages.</p>
 
-<p>Adds a Mobile App Meta Tags settings page with additional options:</p>
+<p>Adds a Mobile Apps settings page with additional options:</p>
 
 <ul>
 <li>Mobile App Banner
@@ -95,7 +95,7 @@
 </ul></li>
 </ul>
 
-<p>Includes and optional Mobile Apps tab in the Document SSO metabox with additional options:</p>
+<p>Includes a Mobile Apps tab in the Document SSO metabox with additional options:</p>
 
 <ul>
 <li>Twitter App Card
