--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
 <h2>Description</h2>
 
-<p><img class="readme-icon" src="https://surniaulula.github.io/wpsso-am/assets/icon-256x256.png"> <strong>Promote your website's mobile App with a banner in Apple's mobile Safari.</strong></p>
+<p><strong>Promote your website's mobile App with a banner in Apple's mobile Safari.</strong></p>
 
 <p><strong>Optionally add <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> markup to mobile App product pages:</strong></p>
 
-<ul style="display:inline-block;">
+<ul>
     <li>twitter:app:country</li>
     <li>twitter:app:id:iphone</li>
     <li>twitter:app:id:ipad</li>
