--- a/html/install.html
+++ b/html/install.html
@@ -11,7 +11,7 @@
 
 	<li>Select the <em>SSO</em> menu item.</li>
 
-	<li>Select the <em>Complementary Add-ons</em> settings page.</li>
+	<li>Select the <em>Plugin Add-ons</em> settings page.</li>
 
 	<li>Scroll down and locate the "WPSSO Mobile App Meta Tags" add-on.</li>
 
