documentation and assets update

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 
 <table>
 <tr><th align="right" valign="top" nowrap>Plugin Name</th><td>WPSSO Mobile App Meta Tags</td></tr>
-<tr><th align="right" valign="top" nowrap>Summary</th><td>Apple Store / iTunes and Google Play App meta tags for Apple&#039;s mobile Safari banner and Twitter&#039;s App Card.</td></tr>
-<tr><th align="right" valign="top" nowrap>Stable Version</th><td>4.0.0</td></tr>
+<tr><th align="right" valign="top" nowrap>Summary</th><td>Apple Store and Google Play App meta tags for Apple\&#039;s mobile Safari banner and X\&#039;s (Twitter) App Card.</td></tr>
+<tr><th align="right" valign="top" nowrap>Stable Version</th><td>4.2.0</td></tr>
 <tr><th align="right" valign="top" nowrap>Requires PHP</th><td>7.2.34 or newer</td></tr>
 <tr><th align="right" valign="top" nowrap>Requires WordPress</th><td>5.8 or newer</td></tr>
-<tr><th align="right" valign="top" nowrap>Tested Up To WordPress</th><td>6.4.2</td></tr>
+<tr><th align="right" valign="top" nowrap>Tested Up To WordPress</th><td>6.6.1</td></tr>
 <tr><th align="right" valign="top" nowrap>Contributors</th><td>jsmoriss</td></tr>
 <tr><th align="right" valign="top" nowrap>License</th><td><a href="https://www.gnu.org/licenses/gpl.txt">GPLv3</a></td></tr>
-<tr><th align="right" valign="top" nowrap>Tags / Keywords</th><td>app store, mobile app, app card, mobile, itunes, googleplay, google play, meta tags, app banner, safari, twitter app card, twitter card</td></tr>
+<tr><th align="right" valign="top" nowrap>Tags / Keywords</th><td>app store, mobile app, app card, itunes, google play</td></tr>
 </table>
 
 <h2>Description</h2>
@@ -47,7 +47,7 @@
 
 <p><strong>Promote your website's mobile App with a banner in Apple's mobile Safari.</strong></p>
 
-<p><strong>Add <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> markup to mobile App product pages:</strong></p>
+<p><strong>Add <a href="https://dev.twitter.com/cards/types/app">X (Twitter) App Card</a> markup to mobile App product pages:</strong></p>
 
 <ul>
     <li>twitter:app:country</li>
@@ -70,7 +70,7 @@
 
 <p>Adds an optional banner in Apple's mobile Safari for your website's Apple Store mobile App.</p>
 
-<p>Adds optional <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> meta tags to webpages.</p>
+<p>Adds optional <a href="https://dev.twitter.com/cards/types/app">X (Twitter) App Card</a> meta tags to webpages.</p>
 
 <p>Includes a Mobile Apps settings page with additional options:</p>
 
@@ -100,7 +100,7 @@
 <p>Includes a Mobile Apps tab in the Document SSO metabox with additional options:</p>
 
 <ul>
-<li>Twitter App Card
+<li>X (Twitter) App Card
 
 <ul>
 <li>App Store Territory</li>
@@ -137,7 +137,7 @@
 
 <h3>WPSSO Core Required</h3>
 
-<p>WPSSO Mobile App Meta Tags (WPSSO AM) is an add-on for the <a href="https://wordpress.org/plugins/wpsso/">WPSSO Core plugin</a>, which provides complete structured data for WordPress to present your content at its best on social sites and in search results – no matter how URLs are shared, reshared, messaged, posted, embedded, or crawled.</p>
+<p>WPSSO Mobile App Meta Tags (WPSSO AM) is an add-on for the <a href="https://wordpress.org/plugins/wpsso/">WPSSO Core plugin</a>, which provides complete structured data for WordPress to present your content at its best for social sites and search results – no matter how URLs are shared, reshared, messaged, posted, embedded, or crawled.</p>
 
 <h2>Installation</h2>
 
